sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:6: error: not found: value lgr
  for(i<-0 to lgr-2){
              ^